# nixpkgs-hammering

./: .gitignore  Cargo.toml  LICENSE.md  README.md  default.nix  flake.nix  run-tests.py  shell.nix
ast-checks/: Cargo.toml
ast-checks/src/: analysis.rs  common_structs.rs  lib.rs  missing-patch-comment.rs  tree_utils.rs
explanations/: attribute-ordering.md  attribute-typo.md  build-tools-in-build-inputs.md  duplicate-check-inputs.md  environment-variables-go-to-env.md  explicit-phases.md  fixup-phase.md  license-missing.md  maintainers-missing.md  meson-cmake.md  missing-patch-comment.md  missing-phase-hooks.md  name-and-version.md  no-flags-array.md  no-flags-spaces.md  no-python-tests.md  no-uri-literals.md  patch-phase.md  python-explicit-check-phase.md  python-imports-check-typo.md  python-include-tests.md  python-inconsistent-interpreters.md  python-unsupported-platforms.md  stale-substitute.md  unclear-gpl.md  unnecessary-parallel-building.md
integration-tests/: test-nixpkgs.py
lib/: default.nix  derivation-attributes-unordered.nix  derivation-attributes.nix  environment-variables.nix  levenshtein.nix  standalone.nix
overlays/: attribute-ordering.nix  attribute-typo.nix  build-tools-in-build-inputs.nix  duplicate-check-inputs.nix  environment-variables-go-to-env.nix  explicit-phases.nix  fixup-phase.nix  intercept-fetchurl.nix  license-missing.nix  maintainers-missing.nix  meson-cmake.nix  missing-phase-hooks.nix  name-and-version.nix  no-flags-array.nix  no-flags-spaces.nix  patch-phase.nix  python-explicit-check-phase.nix  python-imports-check-typo.nix  python-include-tests.nix  python-inconsistent-interpreters.nix  python-unsupported-platforms.nix  unclear-gpl.nix  unnecessary-parallel-building.nix
rust-checks/: Cargo.toml
rust-checks/src/: analysis.rs  comment_finders.rs  common_structs.rs  lib.rs  tree_utils.rs
rust-checks/src/checks/: missing_patch_comment.rs  mod.rs  no_python_tests.rs  no_uri_literals.rs  stale_substitute.rs  unused_argument.rs
src/: lib.rs  main.rs  model.rs  utils.rs
tests/: default.nix  (+1 more)
(+149 files in other folders)
