[package]
name = "nixpkgs-hammering"
version = "0.1.0"
edition = "2021"
authors = ["Jan Tojnar <jtojnar@gmail.com>"]

[[bin]]
name = "nixpkgs-hammer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
indoc = "2.0.5"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
