[package]
name = "nixpkgs-hammer-ast-checks"
version = "0.0.0"
authors = ["Robert T. McGibbon <rmcgibbo@gmail.com>"]
edition = "2018"

[[bin]]
name = "missing-patch-comment"
path = "src/missing-patch-comment.rs"

[dependencies]
codespan = "0.11"
rnix = "0.7.0"
rowan = { version = "0.6.2", features = [ "serde1" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
