[package]
name = "nixpkgs-hammering-ast-checks"
version = "0.0.0"
authors = ["Robert T. McGibbon <rmcgibbo@gmail.com>"]
edition = "2018"

[dependencies]
codespan = "0.11"
regex = "1"
rnix = "0.8"
rowan = { version = "0.9", features = [ "serde1" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
