[package]
name = "rust-checks"
version = "0.0.0"
authors = ["Robert T. McGibbon <rmcgibbo@gmail.com>"]
edition = "2021"

[dependencies]
codespan = "0.11"
regex = "1"
rnix = "0.11"
rowan = { version = "0.15", features = [ "serde1" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
